<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">CalabashTest</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">This will be a test app!</string>
    <string name="new_layout">This is the new layout!</string>
    <string name="click_me">Click me</string>
    <string name="title_activity_details">DetailsActivity</string>
    <string name="see_details">See details</string>
    <string name="would_you_like_to_continue">Would you like to continue?</string>
    <string name="where_are_you_from">Where are you from?</string>
    <string name="asia">Asia</string>
    <string name="africa">Africa</string>
    <string name="america">America</string>

</resources>