<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content" >

	<RelativeLayout
	    android:layout_width="match_parent"
	    android:layout_height="463dp"
	    android:paddingBottom="@dimen/activity_vertical_margin"
	    android:paddingLeft="@dimen/activity_horizontal_margin"
	    android:paddingRight="@dimen/activity_horizontal_margin"
	    android:paddingTop="@dimen/activity_vertical_margin"
	    tools:context=".MainActivity" >
	
	    <TextView
	        android:id="@+id/textView1"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/hello_world" />
	
	    <Button
	        android:id="@+id/button1"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignLeft="@+id/textView1"
	        android:layout_below="@+id/textView1"
	        android:text="@string/click_me" />
	
	    <EditText
	        android:id="@+id/editText1"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignParentLeft="true"
	        android:layout_alignParentRight="true"
	        android:layout_below="@+id/button1"
	        android:ems="10"
	        android:inputType="text" >
	
	        <requestFocus />
	    </EditText>
	
	    <CheckBox
	        android:id="@+id/checkBox1"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignParentLeft="true"
	        android:layout_alignParentRight="true"
	        android:layout_below="@+id/button2"
	        android:layout_marginTop="16dp"
	        android:text="@string/would_you_like_to_continue" />
		
	    <TextView
	        android:id="@+id/textView2"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignParentLeft="true"
	        android:layout_alignParentRight="true"
	        android:layout_below="@+id/checkBox1"
	        android:layout_marginTop="26dp"
	        android:text="@string/where_are_you_from" />
	
	    <RadioGroup
	        android:id="@+id/radioGroup1"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignLeft="@+id/textView2"
	        android:layout_alignParentRight="true"
	        android:layout_below="@+id/textView2" >
	
	        <RadioButton
	            android:id="@+id/radio0"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:checked="true"
	            android:text="@string/asia" />
	
	        <RadioButton
	            android:id="@+id/radio1"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/africa" />
	
	        <RadioButton
	            android:id="@+id/radio2"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/america" />
	    </RadioGroup>
	
	    <Button
	        android:id="@+id/button2"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignLeft="@+id/editText1"
	        android:layout_below="@+id/editText1"
	        android:text="@string/see_details" />

	    <TextView
	        android:id="@+id/textView3"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignParentBottom="true"
	        android:layout_alignParentLeft="true"
	        android:layout_alignParentRight="true"
	        android:layout_below="@+id/radioGroup1"
	        android:text="Lorem ipsum dolor sit amet, erat ligula id mauris tristique lectus sit. Donec lacinia ac libero, non nullam ligula lobortis cras wisi, euismod vel a ultricies, nulla vitae libero vel amet, aliquam sapien fermentum. Ipsum dolor quisque, cum libero montes a. Adipisci nonummy in amet sagittis nec in, curabitur nec, consectetuer augue class congue, quo sollicitudin mus ac. Imperdiet faucibus eros eu, consectetuer cum lorem, accumsan mauris consectetuer nisl sed mattis id, urna semper eu sodales nisl ut non. Quis sem vehicula cras convallis vitae, mattis tellus neque enim vitae dictum a, mauris morbi pulvinar sed aliquam magna, mollis tortor orci elementum in. Viverra amet, primis cras nascetur ipsum vestibulum augue non. Earum malesuada accumsan, nunc duis scelerisque sed sed scelerisque velit, corporis amet orci. Eget varius eget ligula in aptent vivamus, in in nullam, litora pulvinar mauris nunc, mauris curabitur, urna mauris. Leo vivamus ut etiam fringilla sit mauris, imperdiet ipsum mus aptent maecenas, sed rutrum eu. Scelerisque ut ut nunc urna nullam, non euismod auctor risus turpis aliquam primis." />
	
	</RelativeLayout>
</ScrollView>
